<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="359dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:text="@string/daily_challenge_activity_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/BugReportCard"
        android:layout_width="309dp"
        android:layout_height="360dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText">

        <EditText
            android:id="@+id/BugReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="monospace"
            android:gravity="top|left"
            tools:text="@tools:sample/lorem" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BugReportCard"
        app:layout_constraintVertical_bias="0.613" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/next"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/submit" />

        <Space
            android:id="@+id/space"
            android:layout_width="60dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="Restart" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>